--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/rimuru165/my-portfolio.git",
+  "homepage": "",
   "name": "my-portfolio",
   "version": "0.1.0",
   "private": true,
